--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,7 +50,7 @@
                         <li><a href="/#NASLOVNICA" class="nav-item">NASLOVNICA</a></li>
                         <li><a href="/#O-NAMA" class="nav-item">O NAMA</a></li>
                         <li><a href="/#PROGRAMI" class="nav-item">PROGRAMI</a></li>
-                        <li><a href="#TURNIRI" class="nav-item">TURNIRI</a></li>
+                        <li><a href="/../vizija.pdf" target="_blank" class="nav-item">VIZIJA</a></li>
                        <li><a href="#CONTACT" class="nav-item">SHOP</a></li>
                         <li><a href="/login" class="nav-item">LOGIN</a></li> 
                   </ul>
