--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -79,8 +79,8 @@
 
                                 <!-- wrapper ta slajdere -->
                                 <div class="carousel-inner">
-    
-                                    <!-- item 01 -->
+                                    
+                                    <!-- html -->
                                     <div class="item active text-center">
                                         <img src="images/client-01.png" alt="testimonial" class="center-block">
                                         <div class="programi-caption">
@@ -88,13 +88,14 @@
                                             <h4>Osnovna struktura stranice.</h4>
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.”</p>       
                                         </div>             
-                                    </div>    
+                                    </div>
+                                    
                                     <!-- item 02 -->
                                     <div class="item text-center">
                                         <img src="images/client-02.png" alt="testimonial" class="center-block">  
                                         <div class="programi-caption">
                                             <h2>CSS</h2>
-                                            <h4>Osnovni dizajn na stranici i uređivanje samih, pojedinih elemenata na istoj.</h4>
+                                            <h4>Dizajn stranice</h4>
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.”</p>
                                         </div>
                                     </div>
@@ -102,8 +103,8 @@
                                     <div class="item text-center">
                                         <img src="images/client-03.png" alt="testimonial" class="center-block">
                                         <div class="programi-caption">
-                                            <h2>JAVA SCRIPT</h2>
-                                            <h4>Dodatno uređivanje same stranice, kao što je 'smooth scroll', 'transparent navbar' itd.</h4>
+                                            <h2>Javascript</h2>
+                                            <h4>Ponašanje stranice</h4>
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.”</p>
                                         </div>
                                     </div>
